infra/k8s/eventbus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
        - name: eventbus
          image: flecheria/microservice-eventbus:0.0.1
