infra/k8s/posts.yml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: flecheria/microservice-posts:0.0.1
      imagePullPolicy: Never
      # resources:
      #   limits:
      #     memory: 512Mi
      #     cpu: "1"
      #   requests:
      #     memory: 256Mi
      #     cpu: "0.2"
