infra/k8s/comment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  type: ClusterIP
  selector:
    app: comment
  ports: 
    - name: comment
      protocol: TCP
      port: 4001
      targetPort: 4001
