infra/k8s/eventbus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventbus-service
spec:
  type: ClusterIP
  selector:
    app: eventbus
  ports: 
    - name: eventbus
      protocol: TCP
      port: 4005
      targetPort: 4005
