infra/k8s/post-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service-nodeport
spec:
  type: NodePort
  selector:
    app: post
  ports: 
    - name: post
      protocol: TCP
      port: 4000
      targetPort: 4000
