infra/k8s/post-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  type: ClusterIP
  selector:
    app: post
  ports: 
    - name: post
      protocol: TCP
      port: 4000
      targetPort: 4000
