infra/k8s/query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  type: ClusterIP
  selector:
    app: comment
  ports: 
    - name: comment
      protocol: TCP
      port: 4002
      targetPort: 4002
